  resistance will break this, as will drinking a potion of sickness.
- Clumsy: A roleplay option and conduct that allows you to play a permanently
  fumbling character. Probably not terribly hard to ascend with, just very
  frustrating.
- Ill-fated: A challenge mode where the dungeon difficulty is automatically
  upped by 50.
- Pet names for birds and dragons can be specified with birdname and dragonname
  respectively. Birds can be set as the preferred pet with "b".

New Commands
- #give can be used to give items to your pet or peaceful monsters, putting the
  items directly in their inventory. This should streamline the process of
  trying to get pets to take something.

Visual/Interface Changes
- Looking at monsters now tells you what weapon they are wielding, and whether
  they are armored. To avoid nerfing wands of probing, the type of armor is not
  indicated.
- Tigers now are colored orange, in order to make room for lions, which are
  colored yellow.
- Branch staircases are colored yellow (ported from xnethack)
- Altars are colored based on alignment (ported from xnethack)

General Changes
- Deadly poison no longer instantly kills you, but instead will cause both
  HP and attribute damage.
- Probing certain non-unique monsters will tell you their name.
- Monsters are now capable of sacrificing corpses on altars, and all monsters
  that like objects will now pick up corpses (as opposed to just nymphs).
  In rare cases, this can result in monsters being gifted artifacts.
- If a monster on the Astral Plane somehow obtains the Amulet of Yendor and
  makes it to an altar, they will attempt to sacrifice it and gain immortality,
  causing an instant loss.
- Many new artifacts have been added, spanning many different item classes. As
  such, randomly generated artifacts may be slightly more common.
- Increased number of player monsters in the endgame.
- Player monsters no longer spawn with offensive items, making them much more