@@ -24,4 +24,4 @@ guioptions
 porthelp
 NetHack.ad
 gitinfo.txt
-
+splicetips
