@@ -128,6 +128,8 @@ Generate the
 .I bogusmon
 ,
 .I engrave
+,
+.I splicetips
 and
 .IR epitaph files.
 .br
