@@ -274,6 +274,8 @@ quest.dat, bogusmon	More data files.
 .br
 engrave, epitaph, tribute	Still more data files.
 .br
+splicetips	Still more data files.
+.br
 symbols	Data file holding sets of specifications
 .br
 	for how to display monsters, objects, and
