@@ -2,7 +2,7 @@
 # Copyright (c) 2018 by Pasi Kallinen
 # NetHack may be freely redistributed.  See license for details.
 
-# Edited on 3/29/18 by NullCGT
+# Edited on 5/9/18 by NullCGT
 
 # Root of source tree:
 NHSROOT=..
@@ -11,7 +11,7 @@ NHSROOT=..
 # SHELL=E:/GEMINI2/MUPFEL.TTP
 # UUDECODE=uudecode
 
-VARDAT = bogusmon data engrave epitaph rumors quest.dat oracles options
+VARDAT = bogusmon data engrave epitaph rumors quest.dat oracles options splicetips
 
 all:	$(VARDAT) spec_levs quest_levs dungeon
 
@@ -119,6 +119,10 @@ engrave:	engrave.txt ../util/makedefs
 
 epitaph:	epitaph.txt ../util/makedefs
 	../util/makedefs -s
+
+splicetips:	splicetips.txt ../util/makedefs
+	../util/makedefs -s
+
 
 bogusmon:	bogusmon.txt ../util/makedefs
 	../util/makedefs -s
